--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.6.10",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
+    "redis": "^3.1.2",
     "socket.io": "^4.1.3"
   }
 }
