--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-usestateref": "^1.0.5",
     "socket.io-client": "^4.1.3",
     "web-vitals": "^1.1.1"
   },
